--- a/package.json
+++ b/package.json
@@ -12,21 +12,24 @@
     "postbuild": "node scripts/inject-console-capture.js"
   },
   "dependencies": {
-    "next": "16.0.7",
-    "react": "^19.0.1",
-    "react-dom": "^19.0.1",
+    "next": "15.1.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "@cosmicjs/sdk": "^1.5.6"
   },
   "devDependencies": {
-    "@types/node": "^20.0.0",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
-    "typescript": "^5.0.0",
-    "eslint": "^9.0.0",
-    "eslint-config-next": "16.0.7",
-    "tailwindcss": "^3.4.0",
-    "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.0",
-    "glob": "^10.3.10"
+    "@types/node": "^22.10.2",
+    "@types/react": "^19.0.1",
+    "@types/react-dom": "^19.0.2",
+    "typescript": "^5.7.2",
+    "eslint": "^9.17.0",
+    "eslint-config-next": "15.1.3",
+    "tailwindcss": "^3.4.17",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "glob": "^11.0.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
